Samples/VCS/Test1/Litecad.cs


  [DllImport("litecad.dll", EntryPoint="lcBlockAddLine", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddLine(int hBlock, double X1, double Y1, double X2, double Y2);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddLineDir", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddLineDir(int hBlock, double X, double Y, double Angle, double Dist);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddLineTan", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddLineTan(int hBlock, int hEnt1, int hEnt2, int Mode);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddPolyline", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddPolyline(int hBlock, int FitType, bool bClosed, bool bFilled);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddRect", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddRect(int hBlock, double Xc, double Yc, double Width, double Height, double Angle, bool bFilled);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddRect2", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddRect2(int hBlock, double Left, double Bottom, double Width, double Height, double Rad, bool bFilled);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddCircle", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddCircle(int hBlock, double X, double Y, double Radius, bool bFilled);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddArc", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddArc(int hBlock, double X, double Y, double Radius, double StartAngle, double ArcAngle);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddArc3P", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddArc3P(int hBlock, double X1, double Y1, double X2, double Y2, double X3, double Y3);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddEllipse", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddEllipse(int hBlock, double X, double Y, double R1, double R2, double RotAngle, double StartAngle, double ArcAngle);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddText", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddText(int hBlock, string szText, double X, double Y);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddText2", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddText2(int hBlock, string szText, double X, double Y, int Align, double H, double WScale, double RotAngle, double Oblique);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddTextWin", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddTextWin(int hBlock, string szText, double X, double Y);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddTextWin2", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddTextWin2(int hBlock, string szText, double X, double Y, int Align, double H, double WScale, double RotAngle, double Oblique);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddMText", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddMText(int hBlock, string szText, double X, double Y, double WrapWidth, int Align, double RotAngle, double H, double WScale);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddArcText", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddArcText(int hBlock, string szText, double X, double Y, double Radius, double StartAngle, bool bClockwise, double H, double WScale);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddBlockRef", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddBlockRef(int hBlock, int hRefBlock, double X, double Y, double Scal, double Angle);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddBlockRefID", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddBlockRefID(int hBlock, int idRefBlock, double X, double Y, double Scal, double Angle);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddBlockRefIDH", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddBlockRefIDH(int hBlock, string szIdRefBlock, double X, double Y, double Scal, double Angle);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddImageRef", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddImageRef(int hBlock, int hImage, double X, double Y, double Width, double Height, bool bBorder);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddEcw", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddEcw(int hBlock, string szFileName);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddAttDef", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddAttDef(int hBlock, int Mode, string szTag, string szPrompt, string szDefVal, double X, double Y, int Align, double H, double WScale, double RotAngle, double Oblique);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddHatch", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddHatch(int hBlock, string szFileName, string szPatName, double Scal, double Angle);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddViewport", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddViewport(int hBlock, double Lef, double Bot, double Width, double Height, double DrwPntX, double DrwPntY, double DrwScale, double DrwAngle);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddLeader", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddLeader(int hBlock, string szText, double Xt, double Yt, double LandDist, double Xa, double Ya, int Attach, int Align);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddDimRot", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddDimRot(int hBlock, double X0, double Y0, double X1, double Y1, double Xt, double Yt, double Angle, string szText);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddDimHor", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddDimHor(int hBlock, double X0, double Y0, double X1, double Y1, double Yt, string szText);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddDimVer", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddDimVer(int hBlock, double X0, double Y0, double X1, double Y1, double Xt, string szText);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddDimAli", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddDimAli(int hBlock, double X0, double Y0, double X1, double Y1, double Xt, double Yt, string szText);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddDimAli2", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddDimAli2(int hBlock, double X0, double Y0, double X1, double Y1, double Dt, string szText);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddDimOrd", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddDimOrd(int hBlock, double Xd, double Yd, double Xt, double Yt, bool bX, string szText);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddDimRad", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddDimRad(int hBlock, double Xc, double Yc, double Xr, double Yr, double Xt, double Yt, string szText);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddDimRad2", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddDimRad2(int hBlock, double Xc, double Yc, double R, double Angle, double TextOff, string szText);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddDimDia", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddDimDia(int hBlock, double Xc, double Yc, double Xr, double Yr, double Xt, double Yt, string szText);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddDimDia2", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddDimDia2(int hBlock, double Xc, double Yc, double R, double Angle, double TextOff, string szText);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddDimAng", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddDimAng(int hBlock, double Xc, double Yc, double X1, double Y1, double X2, double Y2, double Xa, double Ya, double TextPos, string szText);

  [DllImport("litecad.dll", EntryPoint="lcBlockAddDimAng2", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockAddDimAng2(int hBlock, double X1, double Y1, double X2, double Y2, double X3, double Y3, double X4, double Y4, double Xa, double Ya, double TextPos, string szText);

  [DllImport("litecad.dll", EntryPoint="lcBlockGetFirstEnt", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockGetFirstEnt(int hBlock);

  [DllImport("litecad.dll", EntryPoint="lcBlockGetNextEnt", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockGetNextEnt(int hBlock, int hEnt);

  [DllImport("litecad.dll", EntryPoint="lcBlockGetLastEnt", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockGetLastEnt(int hBlock);

  [DllImport("litecad.dll", EntryPoint="lcBlockGetPrevEnt", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockGetPrevEnt(int hBlock, int hEnt);

  [DllImport("litecad.dll", EntryPoint="lcBlockGetEntByID", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockGetEntByID(int hBlock, int Id);

  [DllImport("litecad.dll", EntryPoint="lcBlockGetEntByIDH", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockGetEntByIDH(int hBlock, string szId);

  [DllImport("litecad.dll", EntryPoint="lcBlockGetEntByKey", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int BlockGetEntByKey(int hBlock, int Key);

  [DllImport("litecad.dll", EntryPoint="lcBlockUnselect", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool BlockUnselect(int hBlock);

  [DllImport("litecad.dll", EntryPoint="lcBlockSelectEnt", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool BlockSelectEnt(int hBlock, int hEntity, bool bSelect);

  [DllImport("litecad.dll", EntryPoint="lcBlockSelErase", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool BlockSelErase(int hBlock);

  [DllImport("litecad.dll", EntryPoint="lcBlockSelMove", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool BlockSelMove(int hBlock, double dX, double dY, bool bCopy, bool bNewSelect);

  [DllImport("litecad.dll", EntryPoint="lcBlockSelScale", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool BlockSelScale(int hBlock, double X0, double Y0, double Scal, bool bCopy, bool bNewSelect);

  [DllImport("litecad.dll", EntryPoint="lcBlockSelRotate", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool BlockSelRotate(int hBlock, double X0, double Y0, double Angle, bool bCopy, bool bNewSelect);

  [DllImport("litecad.dll", EntryPoint="lcBlockSelMirror", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool BlockSelMirror(int hBlock, double X1, double Y1, double X2, double Y2, bool bCopy, bool bNewSelect);

  [DllImport("litecad.dll", EntryPoint="lcBlockSelExplode", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool BlockSelExplode(int hBlock);
